test/compile_errors/err_async_scope_scoped_task_escape.w
//! expect-check-fail: async scope result cannot be ephemeral

async fn work() -> i32:
    1

async fn main:
    let task = async scope s =>:
        let tracked = s.track(work())
        tracked
    let _ = task.await
